--- a/src/dashboard/dash.css
+++ b/src/dashboard/dash.css
@@ -39,9 +39,9 @@ select{
 }
 .sidebar{
   position: fixed;
-  height:100%;
-  width: 240px;
-  background: #0A2558;
+  height:100vh;
+  width: 250px;
+  /* background: #0A2558; */
   transition: all 0.5s ease;
 
 }
